// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCategoryGrid with a large viewport renders with the right attributes 1`] = `
<main
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="main"
  role="main"
  style="background-color: rgb(250, 249, 250);"
>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    {
  "itemCount": 6,
  "containerWidth": 640,
  "containerHeight": 480,
  "maxImageWidth": 188,
  "maxImageHeight": 250,
  "detailHeight": 53,
  "spaceSides": 30,
  "spaceBetween": 5,
  "spaceBottom": 10,
  "numColumns": 4,
  "numRows": 3,
  "imageWidth": 137,
  "imageHeight": 182
}
  </div>
</main>
`;

exports[`useCategoryGrid with a small viewport renders with the right attributes 1`] = `
<main
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="main"
  role="main"
  style="background-color: rgb(250, 249, 250);"
>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    {
  "itemCount": 6,
  "containerWidth": 480,
  "containerHeight": 640,
  "maxImageWidth": 188,
  "maxImageHeight": 250,
  "detailHeight": 53,
  "spaceSides": 20,
  "spaceBetween": 5,
  "spaceBottom": 10,
  "numColumns": 3,
  "numRows": 3,
  "imageWidth": 140,
  "imageHeight": 186
}
  </div>
</main>
`;

exports[`useChannelGrid with a large viewport renders with the right attributes 1`] = `
<main
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="main"
  role="main"
  style="background-color: rgb(250, 249, 250);"
>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    {
  "itemCount": 6,
  "containerWidth": 640,
  "containerHeight": 480,
  "maxImageWidth": 400,
  "maxImageHeight": 225,
  "detailHeight": 72,
  "spaceSides": 30,
  "spaceBetween": 5,
  "spaceBottom": 10,
  "numColumns": 2,
  "numRows": 3,
  "imageWidth": 285,
  "imageHeight": 160
}
  </div>
</main>
`;

exports[`useChannelGrid with a small viewport renders with the right attributes 1`] = `
<main
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="main"
  role="main"
  style="background-color: rgb(250, 249, 250);"
>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    {
  "itemCount": 6,
  "containerWidth": 480,
  "containerHeight": 640,
  "maxImageWidth": 400,
  "maxImageHeight": 225,
  "detailHeight": 72,
  "spaceSides": 20,
  "spaceBetween": 5,
  "spaceBottom": 10,
  "numColumns": 2,
  "numRows": 4,
  "imageWidth": 215,
  "imageHeight": 120
}
  </div>
</main>
`;
